<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonatebloodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donate Blood Save Life"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#eb9e34"
            android:textStyle="italic"
            android:textSize="18sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="20dp"
        android:layout_width="360dp"
        android:layout_gravity="center"
        android:alpha=".9"
        app:cardBackgroundColor="#f54535"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edfullname"
                android:hint="Full Name"
                android:background="@color/white"
                android:layout_width="350dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edaddress"
                android:hint="Address"
                android:background="@color/white"
                android:layout_width="350dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:prefixText="+977"
            app:prefixTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edphone"
                android:hint="Phone"
                android:inputType="number"
                android:background="@color/white"
                android:layout_width="350dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Blood Group"/>
            <Spinner
                android:id="@+id/edbgroup"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edage"
                android:hint="Age"
                android:inputType="number"
                android:background="@color/white"
                android:layout_width="350dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnaddblood"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="Submit"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</ScrollView>