<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donate Blood Save Life"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColor="#eb9e34"
                android:textStyle="italic"
                android:textSize="18sp"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:alpha=".9"
                app:cardBackgroundColor="#f54535"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="login form"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="Email"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="15dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Password"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/rememberme"
                        android:layout_marginVertical="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remember Me"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/login"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:text="Sign in"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register here ..."
                android:textSize="20sp"
                android:padding="16dp"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                android:textColor="#eb9e34"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textColor="#eb9e34"
                android:textStyle="italic"
                android:padding="10dp"
                android:gravity="center"
                android:text="“Your blood donation can give a precious smile to someone’s face.”" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>